load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "argon2",
    srcs = [
        "src/core.c",
        "src/argon2.c",
        "src/encoding.c",
        "src/thread.c",
        "src/ref.c",
        "src/core.h",
        "src/encoding.h",
        "src/thread.h",
    ] + glob(
        [
            "src/blake2/*.h",
            "src/blake2/*.c",
        ],
        allow_empty = False,
    ),
    hdrs = [
        "include/argon2.h",
        "src/blake2/blake2.h",
    ],
    defines = [
        "ARGON2_NO_THREADS",
    ],
    includes = [
        "include",
        "src",
    ],
    visibility = ["//pkg/urcrypt:__subpackages__"],
)
